<resources>
    <string name="app_name">FlixApp</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">E-mail /ou Senha inválido</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>


    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>

    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="text_access_email_to_recover_password">Acesse seu e-mail de cadastro para alterar a senha</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="empty_email">E-mail é obrigatório</string>
    <string name="empty_password">Senha é obrigatória</string>
    <string name="password_weak">Senha deve conter no minímo 6 caracteres</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Baixar</string>
    <string name="title_menu_profile">Perfil</string>

    <string name="text_genre_name">Gêneros: %1$s</string>
    <string name="textTralier">Trailer</string>
    <string name="textSimilar">Similar</string>
    <string name="textComentarios">Comentários</string>

    <!--    SearchFragment-->
    <string name="text_title_empty_search_fragment">Não encontrado</string>
    <string name="text_message_empty_search_fragment">Desculpe, a palavra-chave que você digitou não foi encontrada. Tente verificar novamente ou pesquise com outras palavras-chave.</string>

    <string name="text_dialog_download_size">%1$s / %2$s</string>
    <string name="text_dialog_download_progress">%1$d%%</string>
    <string name="textTbProfile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_edit_perfil">Editar</string>
    <string name="hint_name_profile">Nome</string>
    <string name="hint__last_name_profile">Sobrenome</string>
    <string name="hint_email_profile">E-mail</string>
    <string name="hint_phone_profile">Telefone</string>

    <string-array name="genre">
        <item>Selecione um gênero</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>



</resources>