<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_menu_home" />

    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/title_menu_search" />
    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/title_menu_favorite" />
    <item
        android:id="@+id/menuDownload"
        android:icon="@drawable/ic_menu_download"
        android:title="@string/title_menu_download" />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/title_menu_profile" />
</menu>