<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_marginBottom="16dp"
    tools:context=".presenter.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbLogin" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/title_login_fragment"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


        <EditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edit_auth"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/text_hint_edit_email_login_fragment"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_auth"
            android:ems="10"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/urbanist_600"
            android:hint="@string/text_hint_edit_password_login_fragment"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:textColor="#212121"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailLogin"
            tools:ignore="PrivateResource,TextFields" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_button_sign_in_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordLogin"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/text_forgot_password_login_fragment"
            android:textColor="@color/color_default"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <ImageView
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/loading"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/lnMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CACACA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_700"
                android:paddingHorizontal="16dp"
                android:text="@string/text_continue_social_network_login_fragment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CACACA" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_btn_auth_social"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnGoogleLogin"
            app:layout_constraintTop_toTopOf="@+id/btnGoogleLogin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn_auth_social"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnFacebookLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnMedia">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>